--- a/app/assets/stylesheets/common/base/topic.scss
+++ b/app/assets/stylesheets/common/base/topic.scss
@@ -46,7 +46,7 @@
       grid-area: timeline;
       align-self: start;
       @include sticky;
-      top: 6em;
+      top: calc(var(--header-offset, 60px) + 2em);
       margin-left: 1em;
       z-index: z("timeline");
     }
